fix: alignment

--- a/assets/scss/reset.scss
+++ b/assets/scss/reset.scss
@@ -5,7 +5,7 @@ html {
 body {
     font-family: 'Inter', sans-serif;
     font-size: 1rem;
-    color: black;
+    color: #23252c;
     text-rendering: optimizeLegibility;
     padding: 2rem;
     max-width: 100%;
