--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -34,4 +34,6 @@
 
     --Neutral-900: #141518;
     --Neutral-200: #EEEDEC;
+
+    --chevron-icon: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 24 24'%3E%3Cpath fill='none' stroke='%23a3a3a3' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m10 7l5 5l-5 5'/%3E%3C/svg%3E");
   }
